# LLM-info-extractor

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  launch_config.yaml
sample_prompts/: disease_response.txt  pulmanory_embolism.txt  pulmonary_embolism.txt
scripts/: download.py  labeler.py
src/: __init__.py  combine.py  download.py  prompt.py  train.py  util.py
src/fine_tune/: fine_tune.py  train.py  util.py
src/prompt/: prompt.py
