[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-info-extractor"
description = "Large language model information extractor"
version = "0.1.0"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" },
]
dependencies = [
    "ml_common @ git+https://github.com/ml4oncology/ml-common.git"
]

[tool.setuptools]
package-dir = {"llm_info_extractor" = "src"}